--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,7 @@ jobs:
           version: 9
       - uses: actions/setup-node@v3
         with:
+          registry-url: 'https://registry.npmjs.org/'
           node-version: 18.x
           cache: 'pnpm'
 
