Changed access to public in changesets config

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint": "tsc",
     "build": "tsup index.ts --format cjs,esm --dts",
-    "release": "pnpm run build && changeset publish --access public"
+    "release": "pnpm run build && changeset publish"
   },
   "repository": {
     "type": "git",
