--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,11 +19,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
         with:
-          version: 9
+          version: 7
       - uses: actions/setup-node@v3
         with:
-          registry-url: 'https://registry.npmjs.org/'
-          node-version: 18.x
+          # registry-url: 'https://registry.npmjs.org/'
+          node-version: 16.x
           cache: 'pnpm'
 
       - run: pnpm install --frozen-lockfile
