--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "otp-mgr",
+  "name": "@otp-forge/otp-forge",
   "version": "0.1.0",
   "description": "A nodejs library that handles the generation, storage and verification of OTPs.",
   "main": "dist/index.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rushabhhere/otp-mgr.git"
+    "url": "https://github.com/otp-forge/otp-forge.git"
   },
   "keywords": [
     "otp",
@@ -26,9 +26,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rushabhhere/otp-mgr/issues"
+    "url": "https://github.com/otp-forge/otp-forge/issues"
   },
-  "homepage": "https://github.com/rushabhhere/otp-mgr#readme",
+  "homepage": "https://github.com/otp-forge/otp-forge#readme",
   "devDependencies": {
     "@changesets/cli": "^2.27.7",
     "@types/node": "^20.14.12",
